# bcc-ledger-specs

./: CODEOWNERS  NOTICE  README.md  bors.toml  cabal.project  default.nix  hie.yaml  release.nix  shell.nix  weeder.dhall
Zerepoch-preprocessor/: zerepoch-preprocessor.cabal
Zerepoch-preprocessor/src/: Main.hs  ZerepochScripts.hs
aurum/impl/: .ghcid  bcc-ledger-aurum.cabal
aurum/impl/src/Bcc/Ledger/: Aurum.hs  DescribeEras.hs
aurum/impl/src/Bcc/Ledger/Aurum/: Data.hs  Genesis.hs  Language.hs  PParams.hs  Scripts.hs  Tools.hs  Translation.hs  Tx.hs  TxBody.hs  TxInfo.hs  TxSeq.hs  TxWitness.hs  ZerepochScriptApi.hs
aurum/impl/src/Bcc/Ledger/Aurum/Rules/: AurumConstraints.hs  Bbody.hs  Ledger.hs  Utxo.hs  Utxos.hs  Utxow.hs
aurum/test/: bcc-ledger-aurum-test.cabal
aurum/test/cddl-files/: aurum.cddl
aurum/test/lib/Test/Bcc/Ledger/Aurum/: AurumEraGen.hs  Trace.hs  ZerepochScripts.hs
aurum/test/test/: Tests.hs
aurum/test/test/Test/Bcc/Ledger/Aurum/: Examples.hs  Golden.hs  PropertyTests.hs  Translation.hs  Trials.hs
bcc-ledger-core/: CHANGELOG.md  bcc-ledger-core.cabal
bcc-ledger-core/src/Bcc/Ledger/: Address.hs  AuxiliaryData.hs  BaseTypes.hs  Coin.hs  Compactible.hs  Core.hs  Credential.hs  Crypto.hs  Era.hs  Hashes.hs  Keys.hs  SafeHash.hs  Serialization.hs  Slot.hs  Val.hs  addressindev.hs
bcc-ledger-core/src/Bcc/Ledger/Rules/: ValidationMode.hs
bcc-ledger-test/: CHANGELOG.md  bcc-ledger-test.cabal
bcc-ledger-test/bench/: Main.hs
bcc-ledger-test/bench/Bench/Bcc/Ledger/: ApplyTx.hs  EpochBoundary.hs
bcc-ledger-test/bench/Bench/Bcc/Ledger/Serialisation/: Generators.hs
bcc-ledger-test/bench/resources/: DESCRIPTION.md
bcc-ledger-test/benchProperty/: Main.hs
bcc-ledger-test/src/Test/Bcc/Ledger/: BaseTypes.hs  Properties.hs  TestableEra.hs
bcc-ledger-test/src/Test/Bcc/Ledger/Aurum/: Tools.hs
bcc-ledger-test/src/Test/Bcc/Ledger/Examples/: TwoPhaseValidation.hs
bcc-ledger-test/src/Test/Bcc/Ledger/Generic/: Indexed.hs  Proof.hs  Updaters.hs
bcc-ledger-test/test/: Tests.hs
bcc-protocol-toptimum/: CHANGELOG.md  bcc-protocol-toptimum.cabal
bcc-protocol-toptimum/src/Bcc/Protocol/: TOptimum.hs
bcc-protocol-toptimum/src/Bcc/Protocol/TOptimum/: BHeader.hs  OCert.hs
bcc-protocol-toptimum/src/Bcc/Protocol/TOptimum/Rules/: OCert.hs  Overlay.hs  Prtcl.hs  Updn.hs
cole/chain/executable-spec/: .ghcid  ChangeLog.md  cole-spec-chain.cabal  default.nix
cole/chain/executable-spec/test/: Main.hs
cole/chain/executable-spec/test/Test/Cole/AbstractSize/: Properties.hs
cole/crypto/: README.md  bcc-crypto-wrapper.cabal
cole/crypto/src/Bcc/: Crypto.hs
cole/crypto/src/Bcc/Crypto/: Encryption.hs  Hashing.hs  Orphans.hs  ProtocolMagic.hs  Random.hs  Signing.hs
cole/crypto/src/Bcc/Crypto/Signing/: KeyGen.hs  Redeem.hs  Safe.hs  Signature.hs  SigningKey.hs  Tag.hs  VerificationKey.hs
cole/crypto/src/Bcc/Crypto/Signing/Redeem/: Compact.hs  KeyGen.hs  Signature.hs  SigningKey.hs  VerificationKey.hs
cole/crypto/src/Bcc/Crypto/Signing/Safe/: KeyGen.hs  PassPhrase.hs  SafeSigner.hs
cole/crypto/test/: bcc-crypto-test.cabal  test.hs
cole/crypto/test/Test/Bcc/Crypto/: CBOR.hs  Dummy.hs  Example.hs  Gen.hs  Hashing.hs  Json.hs  Keys.hs  Limits.hs  Orphans.hs  Random.hs
cole/crypto/test/Test/Bcc/Crypto/Signing/: Redeem.hs  Safe.hs  Signing.hs
cole/ledger/executable-spec/: .ghcid  CHANGELOG.md  abraham-spec-ledger.cabal  cole-spec-ledger.cabal  default.nix
cole/ledger/executable-spec/src/Cole/Spec/Ledger/: Core.hs  Delegation.hs  GlobalParams.hs  UTxO.hs  Update.hs  Util.hs
cole/ledger/executable-spec/test/: Main.hs
cole/ledger/impl/: README.md  bcc-ledger-cole.cabal
cole/ledger/impl/doc/: network-magic.md
cole/ledger/impl/src/Bcc/Chain/: Block.hs  Common.hs  Constants.hs  Delegation.hs  Genesis.hs  MempoolPayload.hs  ProtocolConstants.hs  Slotting.hs  Ssc.hs  UTxO.hs  Update.hs  ValidationMode.hs
cole/ledger/impl/src/Bcc/Chain/Block/: Block.hs  Body.hs  Boundary.hs  Header.hs  Proof.hs  Validation.hs  ValidationMode.hs
cole/ledger/impl/src/Bcc/Chain/Cole/: API.hs
cole/ledger/impl/src/Bcc/Chain/Common/: AddrAttributes.hs  AddrSpendingData.hs  CBOR.hs  (+13 more)
cole/ledger/impl/test/: NormalFormTest.hs  bcc-ledger-cole-test.cabal  test.hs
cole/ledger/impl/test/Test/: Options.hs
cole/ledger/impl/test/Test/Bcc/: Mirror.hs
example-sophie/: bcc-ledger-example-sophie.cabal
example-sophie/src/Bcc/Ledger/: Example.hs
example-sophie/src/Bcc/Ledger/Example/: Translation.hs
example-sophie/test/: Tests.hs
example-sophie/test/Test/Bcc/Ledger/: Example.hs
sophie-ma/impl/: .ghcid  bcc-ledger-sophie-ma.cabal
sophie-ma/impl/src/Bcc/Ledger/: Evie.hs  Jen.hs  SophieMA.hs
sophie-ma/impl/src/Bcc/Ledger/Evie/: Translation.hs
sophie-ma/impl/src/Bcc/Ledger/Jen/: Translation.hs  Value.hs
sophie-ma/impl/src/Bcc/Ledger/SophieMA/: AuxiliaryData.hs  Timelocks.hs  TxBody.hs
sophie-ma/sophie-ma-test/: .ghcid  bcc-ledger-sophie-ma-test.cabal
sophie-ma/sophie-ma-test/cddl-files/: sophie-ma.cddl
sophie-ma/sophie-ma-test/src/Test/Bcc/Ledger/: EraBuffet.hs  EvieEraGen.hs  JenEraGen.hs  TranslationTools.hs
sophie-ma/sophie-ma-test/test/: Tests.hs
sophie/chain-and-ledger/dependencies/non-integer/: sophie-spec-non-integral.cabal
sophie/chain-and-ledger/dependencies/non-integer/doc/: godxcoin.sty  non-integer-calculations.tex  references.bib
sophie/chain-and-ledger/dependencies/non-integer/test/: Tests.hs
sophie/chain-and-ledger/executable-spec/: .ghcid  sophie-spec-ledger.cabal
sophie/chain-and-ledger/executable-spec/src/Bcc/Ledger/: Pretty.hs  Sophie.hs
sophie/chain-and-ledger/sophie-spec-ledger-test/: .ghcid  sophie-spec-ledger-test.cabal
sophie/chain-and-ledger/sophie-spec-ledger-test/bench/: BenchUTxOAggregate.hs  BenchValidation.hs  Main.hs
sophie/chain-and-ledger/sophie-spec-ledger-test/cddl-files/: sophie.cddl
sophie/chain-and-ledger/sophie-spec-ledger-test/test/: Tests.hs
sophie/chain-and-ledger/sophie-spec-ledger-test/test/Golden/: SophieGenesis
sophie/chain-and-ledger/sophie-spec-ledger-test/test/Test/: TestScenario.hs
(+425 files in other folders)
