cabal-version: 3.0

name:                bcc-ledger-aurum
version:             0.1.0.0
synopsis:            Bcc ledger introducing Zerepoch Core
description:
  This package builds upon the Jen ledger with support for extended UTxO
  via Zerepoch Core.
bug-reports:         https://github.com/The-Blockchain-Company/bcc-ledger-specs/issues
license:             Apache-2.0
author:              TBCO Formal Methods Team
maintainer:          formal.methods@tbco.io
copyright:           2021 The-Blockchain-Company
category:            Network
build-type:          Simple


common base                         { build-depends: base                             >= 4.12       && < 4.15     }

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages

library
  import:             base, project-config
  exposed-modules:
    Bcc.Ledger.Aurum
    Bcc.Ledger.Aurum.Data
    Bcc.Ledger.Aurum.Genesis
    Bcc.Ledger.Aurum.Language
    Bcc.Ledger.Aurum.ZerepochScriptApi
    Bcc.Ledger.Aurum.PParams
    Bcc.Ledger.Aurum.Rules.Bbody
    Bcc.Ledger.Aurum.Rules.Ledger
    Bcc.Ledger.Aurum.Rules.Utxo
    Bcc.Ledger.Aurum.Rules.Utxos
    Bcc.Ledger.Aurum.Rules.Utxow
    Bcc.Ledger.Aurum.Scripts
    Bcc.Ledger.Aurum.Tools
    Bcc.Ledger.Aurum.Translation
    Bcc.Ledger.Aurum.Tx
    Bcc.Ledger.Aurum.TxBody
    Bcc.Ledger.Aurum.TxInfo
    Bcc.Ledger.Aurum.TxSeq
    Bcc.Ledger.Aurum.TxWitness
    Bcc.Ledger.DescribeEras
  build-depends:
    array,
    base-deriving-via,
    base64-bytestring,
    bytestring,
    bcc-binary,
    bcc-crypto-class,
    bcc-ledger-core,
    bcc-ledger-sophie-ma,
    bcc-prelude,
    bcc-protocol-toptimum,
    bcc-slotting,
    containers,
    data-default,
    deepseq,
    measures,
    mtl,
    nothunks,
    zerepoch-ledger-api,
    zerepoch-tx,
    zerepoch-core,
    prettyprinter,
    serialise,
    sophie-spec-ledger,
    small-steps,
    strict-containers,
    text,
    time,
    transformers,
    utf8-string,
  hs-source-dirs:
    src
