cabal-version: 2.2

name:                bcc-crypto-wrapper
version:             1.3.0
synopsis:            Cryptographic primitives used in the Bcc project
description:         Cryptographic primitives used in the Bcc project
license:             Apache-2.0
author:              TBCO
maintainer:          operations@blockchain-company.io
copyright:           2022 TBCO
category:            Currency
build-type:          Simple
extra-source-files:  README.md

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude

  ghc-options:        -Weverything
                      -Wno-all-missed-specialisations
                      -Wno-missing-deriving-strategies
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-prepositive-qualified-module
                      -Wno-safe
                      -Wno-unsafe
                      -Wunused-packages

  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  hs-source-dirs:      src
  exposed-modules:
                       Bcc.Crypto

                       Bcc.Crypto.Hashing
                       Bcc.Crypto.Orphans
                       Bcc.Crypto.ProtocolMagic
                       Bcc.Crypto.Random
                       Bcc.Crypto.Signing
                       Bcc.Crypto.Signing.Redeem
                       Bcc.Crypto.Signing.Safe

  other-modules:
                       Bcc.Crypto.Signing.Tag

                       Bcc.Crypto.Signing.KeyGen
                       Bcc.Crypto.Signing.VerificationKey
                       Bcc.Crypto.Signing.SigningKey
                       Bcc.Crypto.Signing.Signature

                       Bcc.Crypto.Signing.Redeem.Compact
                       Bcc.Crypto.Signing.Redeem.KeyGen
                       Bcc.Crypto.Signing.Redeem.SigningKey
                       Bcc.Crypto.Signing.Redeem.Signature
                       Bcc.Crypto.Signing.Redeem.VerificationKey

                       Bcc.Crypto.Signing.Safe.KeyGen
                       Bcc.Crypto.Signing.Safe.PassPhrase
                       Bcc.Crypto.Signing.Safe.SafeSigner

  build-depends:       aeson
                     , base16-bytestring >= 1
                     , base64-bytestring
                     , base64-bytestring-type
                     , binary
                     , bytestring
                     , canonical-json
                     , bcc-binary
                     , bcc-crypto
                     , bcc-prelude
                     , cryptonite
                     , data-default
                     , formatting
                     , memory
                     , mtl
                     , nothunks
                     , text

test-suite test
  import:             base, project-config

  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  other-modules:
                       Test.Bcc.Crypto.CBOR
                       Test.Bcc.Crypto.Dummy
                       Test.Bcc.Crypto.Example
                       Test.Bcc.Crypto.Gen
                       Test.Bcc.Crypto.Hashing
                       Test.Bcc.Crypto.Json
                       Test.Bcc.Crypto.Keys
                       Test.Bcc.Crypto.Limits
                       Test.Bcc.Crypto.Orphans
                       Test.Bcc.Crypto.Random
                       Test.Bcc.Crypto.Signing.Redeem
                       Test.Bcc.Crypto.Signing.Redeem.Compact
                       Test.Bcc.Crypto.Signing.Safe
                       Test.Bcc.Crypto.Signing.Signing

  build-depends:       bytestring
                     , bcc-binary
                     , bcc-binary-test
                     , bcc-crypto
                     , bcc-crypto-wrapper
                     , bcc-prelude
                     , bcc-prelude-test
                     , cryptonite
                     , formatting
                     , hedgehog >= 1.0.4
                     , memory
                     , text

  ghc-options:         -threaded
                       -rtsopts
