cabal-version: 2.2

name:                bcc-ledger-sophie-ma
version:             0.1.0.0
synopsis:            Sophie ledger with multiasset and time lock support.
description:
  This package extends the Sophie ledger with support for
  native tokens and timelocks.
bug-reports:         https://github.com/The-Blockchain-Company/bcc-ledger-specs/issues
license:             Apache-2.0
author:              TBCO Formal Methods Team
maintainer:          dev@blockchain-company.io
copyright:           2021 The-Blockchain-Company
category:            Network
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/bcc-ledger-specs

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

library
  import:             base, project-config

  exposed-modules:
    Bcc.Ledger.Evie
    Bcc.Ledger.Evie.Translation
    Bcc.Ledger.Jen
    Bcc.Ledger.Jen.Translation
    Bcc.Ledger.Jen.Value
    Bcc.Ledger.SophieMA
    Bcc.Ledger.SophieMA.AuxiliaryData
    Bcc.Ledger.SophieMA.Rules.EraMapping
    Bcc.Ledger.SophieMA.Rules.Utxo
    Bcc.Ledger.SophieMA.Rules.Utxow
    Bcc.Ledger.SophieMA.Timelocks
    Bcc.Ledger.SophieMA.TxBody

  -- other-extensions:
  build-depends:
    bytestring,
    base16-bytestring,
    bcc-binary,
    bcc-crypto-class,
    bcc-ledger-core,
    bcc-prelude,
    bcc-protocol-toptimum,
    bcc-slotting,
    cborg,
    containers,
    data-default-class,
    deepseq,
    groups,
    mtl,
    nothunks,
    prettyprinter,
    primitive,
    sophie-spec-ledger,
    small-steps,
    strict-containers,
    text,
    transformers
  hs-source-dirs: src
