cabal-version: 2.2

name:                bcc-ledger-sophie-ma-test
version:             0.1.0.0
synopsis:            Sophie ledger with multiasset and time lock support.
description:
  This package extends the Sophie ledger with support for
  native tokens and timelocks.
bug-reports:         https://github.com/The-Blockchain-Company/bcc-ledger-specs/issues
license:             Apache-2.0
author:              TBCO Formal Methods Team
maintainer:          dev@blockchain-company.io
copyright:           2021 The-Blockchain-Company
category:            Network
build-type:          Simple

extra-source-files:
  cddl-files/sophie-ma.cddl
  cddl-files/mock/crypto.cddl
  cddl-files/mock/extras.cddl

source-repository head
  type:     git
  location: https://github.com/The-Blockchain-Company/bcc-ledger-specs

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Werror
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages

library
  import:             base, project-config

  exposed-modules:
    Test.Bcc.Ledger.TranslationTools
    Test.Bcc.Ledger.EraBuffet
    Test.Bcc.Ledger.JenEraGen
    Test.Bcc.Ledger.Jen.Golden
    Test.Bcc.Ledger.Jen.Examples.Consensus
    Test.Bcc.Ledger.EvieEraGen
    Test.Bcc.Ledger.Evie.Examples.Consensus
    Test.Bcc.Ledger.SophieMA.TxBody
    Test.Bcc.Ledger.SophieMA.Serialisation.Coders
    Test.Bcc.Ledger.SophieMA.Serialisation.Generators
    Test.Bcc.Ledger.SophieMA.Serialisation.Roundtrip
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.15,
    base16-bytestring,
    bytestring,
    bcc-binary,
    bcc-crypto-class,
    bcc-ledger-core,
    bcc-ledger-sophie-ma,
    bcc-prelude,
    bcc-slotting,
    cborg,
    containers,
    generic-random,
    hashable,
    mtl,
    QuickCheck >= 2.13.2,
    sophie-spec-ledger-test,
    sophie-spec-ledger,
    small-steps,
    strict-containers,
    tasty-hunit,
    tasty-quickcheck,
    tasty,
    text
  hs-source-dirs: src

test-suite bcc-ledger-sophie-ma-test
  import:             base, project-config

  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  hs-source-dirs:     test
  other-modules:
      Test.Bcc.Ledger.Jen.Examples
      Test.Bcc.Ledger.Jen.Examples.Cast
      Test.Bcc.Ledger.Jen.Examples.MultiAssets
      Test.Bcc.Ledger.Jen.Translation
      Test.Bcc.Ledger.Jen.Value
      Test.Bcc.Ledger.Evie.Translation
      Test.Bcc.Ledger.Evie.ScriptTranslation
      Test.Bcc.Ledger.SophieMA.Serialisation
      Test.Bcc.Ledger.SophieMA.Serialisation.CDDL
      Test.Bcc.Ledger.SophieMA.Serialisation.Golden.Encoding
      Test.Bcc.Ledger.SophieMA.Serialisation.Timelocks
  -- We set a bound here so that we're alerted of potential space
  -- leaks in our generators (or test) code.
  --
  -- The 4 megabytes stack bound and 200 megabytes heap bound were
  -- determined ad-hoc.
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      "-with-rtsopts=-K4m -M250m"
  build-depends:
      base >=4.9 && <4.15,
      bytestring,
      bcc-binary,
      bcc-ledger-core,
      bcc-ledger-sophie-ma-test,
      bcc-ledger-sophie-ma,
      bcc-slotting,
      cborg,
      containers,
      data-default-class,
      mtl,
      QuickCheck,
      sophie-spec-ledger-test,
      sophie-spec-ledger,
      small-steps-test,
      small-steps,
      strict-containers,
      tasty-hunit,
      tasty-quickcheck,
      tasty,
