cabal-version: 2.2

name:                cole-spec-chain
version:             0.1.0.0
synopsis:            Executable specification of the Bcc blockchain
-- description:
homepage:            https://github.com/The-Blockchain-Company/bcc-legder-specs
license:             Apache-2.0
author:              TBCO Formal Methods Team
maintainer:          dev@blockchain-company.io
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md

flag development
    description: Disable '-Werror'
    default: False
    manual: True

common base                         { build-depends: base                             >= 4.11       && < 4.15     }

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wunused-packages

  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  exposed-modules:     Cole.Spec.Chain.STS.Block
                     , Cole.Spec.Chain.STS.Rule.BBody
                     , Cole.Spec.Chain.STS.Rule.Bupi
                     , Cole.Spec.Chain.STS.Rule.Chain
                     , Cole.Spec.Chain.STS.Rule.Epoch
                     , Cole.Spec.Chain.STS.Rule.Pbft
                     , Cole.Spec.Chain.STS.Rule.SigCnt

  hs-source-dirs:      src
  build-depends:       bimap >=0.4 && <0.5
                     , bytestring
                     , containers
                     , cole-spec-ledger
                     , shepards
                     , hashable
                     , hedgehog >= 1.0.4
                     , microlens
                     , microlens-th
                     , small-steps
                     , small-steps-test

test-suite chain-rules-test
  import:             base, project-config

  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Cole.Spec.Chain.STS.Properties
                     , Test.Cole.AbstractSize.Properties
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       containers
                     , data-ordlist
                     , hedgehog >= 1.0.4
                     , microlens
                     , tasty
                     , tasty-hedgehog
                     , tasty-hunit
                     -- local deps
                     , cole-spec-chain
                     , cole-spec-ledger
                     , small-steps
                     , small-steps-test

  -- See `cole-spec-ledger.cabal` for an explanation of the options below.
  ghc-options:         "-with-rtsopts=-K4m -M300m"
