cabal-version: 2.2

name:                bcc-crypto-test
version:             1.3.0
synopsis:            Test helpers from bcc-crypto exposed to other packages
description:         Test helpers from bcc-crypto exposed to other packages
license:             Apache-2.0
author:              TBCO
maintainer:          operations@blockchain-company.io
copyright:           2022 TBCO
category:            Currency
build-type:          Simple

flag development
    description: Disable `-Werror`
    default: False
    manual: True

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  default-extensions: NoImplicitPrelude

  ghc-options:        -Weverything
                      -Wno-all-missed-specialisations
                      -Wno-missing-deriving-strategies
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-prepositive-qualified-module
                      -Wno-safe
                      -Wno-unsafe
                      -Wunused-packages

  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  exposed-modules:
                       Test.Bcc.Crypto.CBOR
                       Test.Bcc.Crypto.Dummy
                       Test.Bcc.Crypto.Example
                       Test.Bcc.Crypto.Gen
                       Test.Bcc.Crypto.Json
                       Test.Bcc.Crypto.Orphans

  build-depends:       bytestring
                     , bcc-binary
                     , bcc-binary-test
                     , bcc-crypto
                     , bcc-crypto-wrapper
                     , bcc-prelude
                     , bcc-prelude-test
                     , cryptonite
                     , hedgehog >= 1.0.4
                     , memory
