cabal-version: 2.2

name:                cole-spec-ledger
version:             0.1.0.0
synopsis:            Executable specification of Bcc ledger
-- description:
homepage:            https://github.com/The-Blockchain-Company/bcc-legder-specs
license:             Apache-2.0
author:              TBCO Formal Methods Team
maintainer:          formal.methods@tbco.io
-- copyright:
category:            Testing
build-type:          Simple

extra-source-files:  CHANGELOG.md
                     src/shepard_genomes/*.genome

flag development
    description: Disable '-Werror'
    default: False
    manual: True

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wno-unused-packages
               
  if (!flag(development))
    ghc-options:      -Werror

library
  import:             base, project-config

  hs-source-dirs:      src
  exposed-modules:     Hedgehog.Gen.Double
                     , Cole.Spec.Ledger.Core
                     , Cole.Spec.Ledger.Core.Generators
                     , Cole.Spec.Ledger.Core.Omniscient
                     , Cole.Spec.Ledger.Delegation
                     , Cole.Spec.Ledger.Delegation.Test
                     , Cole.Spec.Ledger.GlobalParams
                     , Cole.Spec.Ledger.Update
                     , Cole.Spec.Ledger.Update.Generators
                     , Cole.Spec.Ledger.Update.Test
                     , Cole.Spec.Ledger.UTxO
                     , Cole.Spec.Ledger.UTxO.Generators
                     , Cole.Spec.Ledger.Util
                     , Cole.Spec.Ledger.STS.UTXO
                     , Cole.Spec.Ledger.STS.UTXOW
                     , Cole.Spec.Ledger.STS.UTXOWS
  build-depends:       bimap >=0.4 && <0.5
                     , containers
                     , filepath
                     , shepards
                     , hashable
                     , hedgehog >= 1.0.4
                     , microlens
                     , microlens-th
                     , nothunks
                     , template-haskell
                     , Unique >= 0.4.7.6
                     -- TBCO deps
                     , bcc-binary
                     -- Local deps
                     , small-steps
                     , small-steps-test

test-suite cole-spec-ledger-test
  import:             base, project-config

  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Test.Cole.Spec.Ledger.Core.Generators.Properties
               , Test.Cole.Spec.Ledger.Delegation.Examples
               , Test.Cole.Spec.Ledger.Delegation.Properties
               , Test.Cole.Spec.Ledger.AbstractSize.Properties
               , Test.Cole.Spec.Ledger.Update.Examples
               , Test.Cole.Spec.Ledger.Update.Properties
               , Test.Cole.Spec.Ledger.Relation.Properties
               , Test.Cole.Spec.Ledger.UTxO.Properties
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends: bimap >=0.4 && <0.5
               , containers
               , hedgehog >= 1.0.4
               , microlens
               , microlens-th
               , tasty
               , tasty-hunit
               , tasty-hedgehog
               , Unique >= 0.4.7.6
               -- Local deps
               , cole-spec-ledger
               , small-steps
               , small-steps-test

  -- We set a bound here so that we're alerted of potential space
  -- leaks in our generators (or test) code.
  --
  -- The 4 megabytes stack bound and 150 megabytes heap bound were
  -- determined ad-hoc.
  ghc-options:        "-with-rtsopts=-K4m -M150m"
